Speakers page at parity with google sites

--- a/speakers.html
+++ b/speakers.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="css/custom.scss" rel="stylesheet">
   <!-- Place favicon.ico in the root directory -->
-  
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -42,142 +42,158 @@
             <img class="img-fluid float-start" src="/img/speakers/Dan.png">
           </div>
           <div class="col-8 ml-2 pt-4">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Dan Lawyer <img src="/img/linkedin.svg"></a>
-  
+              <a href="https://www.linkedin.com/in/dan-lawyer-75919b/">Dan Lawyer <img src="/img/linkedin.svg"></a>
+
               <p class="pt-2">Senior business leader with a proven record of elevating performance, crafting superior strategy, building exceptional teams, delivering great products, and driving solid execution of product organizations.
                 Fun fact:</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/jamie-lyon.jpeg">
           </div>
           <div class="col-8 ml-2 pt-4">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Jamie Lyon                <img src="/img/linkedin.svg"></a>
-  
+              <a href="https://www.linkedin.com/in/jamie-bergeson-lyon/">Jamie Lyon                <img src="/img/linkedin.svg"></a>
+
               <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
                 Fun fact:</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/john-dilworth.jpeg">
           </div>
           <div class="col-8 ml-2 pt-4">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Jarom Chung <img src="/img/linkedin.svg"></a>
-  
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+              <a href="https://www.linkedin.com/in/johndilworth">John Dilworth                <img src="/img/linkedin.svg"></a>
+
+              <p class="pt-2">Experienced designer and leader. Working to build strong and effective design teams that solve tough problems and make the world a better place to work and live.
+Fun fact: I spent a couple hours at the place on earth closest to the sun, and got a really bad sunburn on my forehead.</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/jarom-chung.jpeg">
           </div>
           <div class="col-8 ml-2 pt-4">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Allen Liao                <img src="/img/linkedin.svg"></a>
-  
+              <a href="https://www.linkedin.com/in/jaromchung">Jarom Chung <img src="/img/linkedin.svg"></a>
+
               <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
                 Fun fact:</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/allen-liao.jpeg">
           </div>
           <div class="col-8 ml-2 pt-4">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Taylor Halversen                <img src="/img/linkedin.svg"></a>
-  
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+              <a href="https://www.linkedin.com/in/allen-liao">Allen Liao                <img src="/img/linkedin.svg"></a>
+
+              <p class="pt-2">Enjoy working in challenging environment. Striving to achieve excellence.
+Fun fact:</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/taylor-halverson.jpeg">
           </div>
-          <div class="col-8 ml-2">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Phil Badger <img src="/img/linkedin.svg"></a>
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+          <div class="col-8 ml-2 pt-4">
+              <a href="https://www.linkedin.com/in/thalversen">Taylor Halversen                <img src="/img/linkedin.svg"></a>
+
+              <p class="pt-2">Bio: Experienced strategic thinker with an empathic point of view and a multidisciplinary skillset. Background as an experience design consultant - a cross between an ethnographic researcher, service design facilitator, and business strategist. Recently received an MBA, with an emphasis in strategy and business analytics.
+Fun Fact: I graduated both high school and college with a 4.0 GPA.</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/phil-badger.jpeg">
           </div>
           <div class="col-8 ml-2">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Dan Ebeling                <img src="/img/linkedin.svg"></a>
+              <a href="https://www.linkedin.com/in/phillipbadger">Phil Badger <img src="/img/linkedin.svg"></a>
               <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
                 Fun fact:</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/dan-ebeling.jpeg">
           </div>
           <div class="col-8 ml-2">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Saurabh Phadnis                <img src="/img/linkedin.svg"></a>
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+              <a href="https://www.linkedin.com/in/danebeling">Dan Ebeling                <img src="/img/linkedin.svg"></a>
+              <p class="pt-2">I am a UX Designer II at Lucid with experience in educational technology and software engineering. My passion for creating in the digital space has led to measurable success. I value leadership, autonomy, growth, and balance.
+Fun fact:</p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
     <hr>
     <div class="row mt-5 mb-5">
       <div class="col-12">
         <div class="row speakers">
           <div class="col-2">
-            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+            <img class="img-fluid float-start" src="/img/speakers/saurabh-phadnis.jpeg">
           </div>
           <div class="col-8 ml-2">
-              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Brint Markle                <img src="/img/linkedin.svg"></a>
+              <a href="https://www.linkedin.com/in/saurabphadnis-2901">Saurabh Phadnis                <img src="/img/linkedin.svg"></a>
+              <p class="pt-2">Experience designer building and focusing on conceptualizing new product ideas, strategies, and interaction patterns that continuously challenge the status quo.
+Fun fact:</p>
+          </div>
+        </div>
+       </div>
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/brint-markle.jpeg">
+          </div>
+          <div class="col-8 ml-2">
+              <a href="https://www.linkedin.com/in/brintmarkle">Brint Markle                <img src="/img/linkedin.svg"></a>
               <p class="pt-2">Bio: Brint is Director of BD & Strategic Partnerships at Lucid. In his position, he leads our business development activities, product/strategic partnerships, and jointly drives integration platform vision and strategy in partnership with the product team. He frequently runs workshops and brainstorming sessions with our partners to deepen partner engagement and uncover new areas of shared value. Brint is a former founder of two outdoor technology companies, which he led from founding through early stage growth and acquisition.  He is also an Entrepreneur-in-Residence at MIT where he advises several technology start-ups, mostly helping them avoid the many mistakes he made as an entrepreneur ;)
               Fun Fact: Brint used to live in Chile where he worked for a start-up microfinance organization, learned to speak ‘Chilean’ Spanish (cachai!?), and once skied into the crater of an active volcano.
               </p>
           </div>
         </div>
-       </div> 
+       </div>
     </div>
   </div>
   </div>
-  
+
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
