--- a/index.html
+++ b/index.html
@@ -32,41 +32,44 @@
     <div class="container hero-container">
       <div class="hero-headline row">
         <h2>Lucid to the Moon <span>2021 Product Summit</span></h2>
+      </div>
       <br>
       <div class="mt-5 hero-subheadline">
         <h4>A two-day summit of talks, activities, and workshops for Lucid's Product org.</h4>
         <!-- <h5>In-person / Online</h5> -->
       </div>
-    </div>
-    <div class="container">
       <div class="row">
-          <div class="col-5 mt-3">
+          <div class="col-md-5 mt-3 my-3">
               <div class="homepage-card-outline">
-                  <div class="card-horizontal homepage-card">
-                      <div class="">
+                  <div class="row card-horizontal homepage-card g-0">
+                      <div class="col-md-6">
                           <img class="card-image" src="img/cards/saturn5.png" alt="Card image cap">
                       </div>
-                      <div class="card-body homepage-card-body">
+                      <div class="col-md-6 card-body homepage-card-body">
                           <h5 class="card-title">Day 1:</h5>
                           <h5 class="card-subtitle">Wednesday, June 9th</p>
                       </div>
                   </div>
               </div>
           </div>
-          <div class="col-5 mt-3 mb-5">
+          <div class="col-md-5 mt-3 my-3">
             <div class="homepage-card-outline">
-                <div class="card-horizontal homepage-card">
-                    <div class="">
+                <div class=" row card-horizontal homepage-card g-0">
+                    <div class="col-md-6">
                         <img class="card-image" src="img/cards/neil.png" alt="Card image cap">
                     </div>
-                    <div class="card-body homepage-card-body">
-                        <h5 class="card-title">Day 1:</h5>
-                        <h5 class="card-subtitle">Wednesday, June 9th</p>
+                    <div class=" col-md-6 card-body homepage-card-body">
+                        <h5 class="card-title">Day 2:</h5>
+                        <h5 class="card-subtitle">Thursday, June 10th</p>
                     </div>
                 </div>
               </div>
         </div>
       </div>
+    </div>
+  </div>
+    <div class="container">
+
       <div class="row mt-5">
         <div class="col-12">
           <div class="mt-5 quote-card">
@@ -76,26 +79,49 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-12">
-          <h4>A Look Back at Product Summit 2020
+        <h4>A Look Back at Product Summit 2020</h4>
+      </div>
+      <div class="row mt-2">
+        <div class="col-md-8 mx-auto">
           <!-- Carousel -->
-          <div id="carouselExampleFade" class="carousel slide carousel-fade mt-5" data-bs-ride="carousel">
+          <div id="lookbackCarousel" class="carousel slide mt-5 carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/page-headers/agenda.png" class="d-block w-100" alt="...">
+                <img src="img/look-back/look-back-1.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/page-headers/faqs.png" class="d-block w-100" alt="...">
+                <img src="img/look-back/look-back-2.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/page-headers/agenda.png" class="d-block w-100" alt="...">
+                <img src="img/look-back/look-back-3.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/look-back/look-back-4.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/look-back/look-back-5.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/look-back/look-back-6.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/look-back/look-back-7.jpeg" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#lookbackCarousel" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#lookbackCarousel" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
@@ -103,8 +129,6 @@
         </div>
       </div>
   </div>
-</div>
-</div>
   <!-- <img src="./img/page-headers/agenda.png" class="img-fluid">  -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
