Updated Locations Images

--- a/locations.html
+++ b/locations.html
@@ -44,7 +44,7 @@
       </div>
       <div class="col-md">
         <div id="salt-lake-city-image">
-          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+          <img class="inserted-image" src="img/locations/slack-zoom.png"></img>
         </div>
         <div class="image-caption">
 
@@ -65,7 +65,7 @@
       </div>
       <div class="col-md">
         <div id="salt-lake-city-image">
-          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+          <img class="inserted-image" src="img/locations/sojo-building.jpeg"></img>
         </div>
         <div class="image-caption">
 
@@ -86,7 +86,7 @@
       </div>
       <div class="col-md">
         <div id="salt-lake-city-image">
-          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+          <img class="inserted-image" src="img/locations/riverfront.png"></img>
         </div>
         <div class="image-caption">
 
