--- a/speakers.html
+++ b/speakers.html
@@ -44,8 +44,8 @@
           <div class="col-8 ml-2 pt-4">
               <a href="https://www.linkedin.com/in/dan-lawyer-75919b/">Dan Lawyer <img src="/img/linkedin.svg"></a>
 
-              <p class="pt-2">Senior business leader with a proven record of elevating performance, crafting superior strategy, building exceptional teams, delivering great products, and driving solid execution of product organizations.
-                Fun fact:</p>
+              <p class="pt-2">Senior business leader with a proven record of elevating performance, crafting superior strategy, building exceptional teams, delivering great products, and driving solid execution of product organizations.</p>
+              <p><strong>Fun fact:</strong> I speak English, Finnish, and American Sign Language. The job I had immediately before my first tech job was maintaining the sewer system for the City of Orem.</p>
           </div>
         </div>
        </div>
@@ -60,8 +60,8 @@
           <div class="col-8 ml-2 pt-4">
               <a href="https://www.linkedin.com/in/jamie-bergeson-lyon/">Jamie Lyon                <img src="/img/linkedin.svg"></a>
 
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+              <p class="pt-2">Lover of all things strategy, especially when it comes to defining new categories and launching new products. Passionate about relationships and connection. Mother of 2 and in the market for a mountain bike.</p>
+              <p><strong>Fun fact:</strong> Both of my grandmothers were state senators.</p>
           </div>
         </div>
        </div>
@@ -76,8 +76,8 @@
           <div class="col-8 ml-2 pt-4">
               <a href="https://www.linkedin.com/in/johndilworth">John Dilworth                <img src="/img/linkedin.svg"></a>
 
-              <p class="pt-2">Experienced designer and leader. Working to build strong and effective design teams that solve tough problems and make the world a better place to work and live.
-Fun fact: I spent a couple hours at the place on earth closest to the sun, and got a really bad sunburn on my forehead.</p>
+              <p class="pt-2">Sr. Director of User Experience at Lucid. I am a designer/manager and wanna-be artist. For the past two decades I've been designing interfaces trying to make cool things happen on the internet. Formerly Instructure, Ancestry.com.</p>
+              <p><strong>Fun fact:</strong> I spent a couple hours at the place on earth closest to the sun, and got a really bad sunburn on my forehead.</p>
           </div>
         </div>
        </div>
@@ -92,8 +92,8 @@ Fun fact: I spent a couple hours at the place on earth closest to the sun, and g
           <div class="col-8 ml-2 pt-4">
               <a href="https://www.linkedin.com/in/jaromchung">Jarom Chung <img src="/img/linkedin.svg"></a>
 
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+              <p class="pt-2">Solving problems keeps him up at night and wakes him up in the morning. This recovering career nomad loves the marriage of deeply understanding user problems and leveraging user behavior analytics to create outstanding solutions and products.</p>
+              <p><strong>Fun Fact:</strong> I can clap my feet together super loud.</p>
           </div>
         </div>
        </div>
@@ -108,8 +108,8 @@ Fun fact: I spent a couple hours at the place on earth closest to the sun, and g
           <div class="col-8 ml-2 pt-4">
               <a href="https://www.linkedin.com/in/allen-liao">Allen Liao                <img src="/img/linkedin.svg"></a>
 
-              <p class="pt-2">Enjoy working in challenging environment. Striving to achieve excellence.
-Fun fact:</p>
+              <p class="pt-2">Love working hard in a challenging environment around cool people. I embrace changes and enjoy solving new problems.</p>
+              <p><strong>Fun fact:</strong> I was in artillery and accidentally shot the cannonball to a suburban factory (luckily no one was hurt…).</p>
           </div>
         </div>
        </div>
@@ -124,8 +124,8 @@ Fun fact:</p>
           <div class="col-8 ml-2 pt-4">
               <a href="https://www.linkedin.com/in/thalversen">Taylor Halversen                <img src="/img/linkedin.svg"></a>
 
-              <p class="pt-2">Bio: Experienced strategic thinker with an empathic point of view and a multidisciplinary skillset. Background as an experience design consultant - a cross between an ethnographic researcher, service design facilitator, and business strategist. Recently received an MBA, with an emphasis in strategy and business analytics.
-Fun Fact: I graduated both high school and college with a 4.0 GPA.</p>
+              <p class="pt-2">Experienced strategic thinker with an empathic point of view and a multidisciplinary skillset. Background as an experience design consultant - a cross between an ethnographic researcher, service design facilitator, and business strategist. Recently received an MBA, with an emphasis in strategy and business analytics.</p>
+              <p><strong>Fun Fact:</strong> I graduated both high school and college with a 4.0 GPA.</p>
           </div>
         </div>
        </div>
@@ -139,8 +139,8 @@ Fun Fact: I graduated both high school and college with a 4.0 GPA.</p>
           </div>
           <div class="col-8 ml-2">
               <a href="https://www.linkedin.com/in/phillipbadger">Phil Badger <img src="/img/linkedin.svg"></a>
-              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
-                Fun fact:</p>
+              <p class="pt-2">Phil is Senior Director of Strategy at Lucid, where he focuses on new products and initiatives to drive Lucid’s future growth. Throughout his career in technology (Cisco, Samsung, and now Lucid), he has specialized in solving strategic problems and getting teams to work together to implement the solutions.</p>
+              <p><strong>Fun fact:</strong> Phil loves to ski and is really into ski movies (like those seen here: skimovie.com)</p>
           </div>
         </div>
        </div>
@@ -154,8 +154,8 @@ Fun Fact: I graduated both high school and college with a 4.0 GPA.</p>
           </div>
           <div class="col-8 ml-2">
               <a href="https://www.linkedin.com/in/danebeling">Dan Ebeling                <img src="/img/linkedin.svg"></a>
-              <p class="pt-2">I am a UX Designer II at Lucid with experience in educational technology and software engineering. My passion for creating in the digital space has led to measurable success. I value leadership, autonomy, growth, and balance.
-Fun fact:</p>
+              <p class="pt-2">I am a UX Designer II at Lucid with experience in educational technology and software engineering. My passion for creating in the digital space has led to measurable success. I value leadership, autonomy, growth, and balance.</p>
+              <p><strong>Fun fact:</strong>Spent 5 years growing up in Germany enjoying the perspectives Europe has to offer</p>
           </div>
         </div>
        </div>
@@ -169,8 +169,8 @@ Fun fact:</p>
           </div>
           <div class="col-8 ml-2">
               <a href="https://www.linkedin.com/in/saurabphadnis-2901">Saurabh Phadnis                <img src="/img/linkedin.svg"></a>
-              <p class="pt-2">Experience designer building and focusing on conceptualizing new product ideas, strategies, and interaction patterns that continuously challenge the status quo.
-Fun fact:</p>
+              <p class="pt-2">Experienced designer building and focusing on conceptualizing new product ideas, strategies, and interaction patterns that continuously challenge the status quo. Worked across a diverse set of domains to achieve end-to-end product designs for multiple cross-platform applications. He firmly believes that as a designer, his work is to continuously challenge reality. The crazier the idea, the better are the chances to reach new product innovations.</p>
+              <p><strong>Fun fact:</strong> Right from the start, Saurabh has changed school at every level as designed by this world’s education system - elementary to masters - making it a total of 8 different schools.</p>
           </div>
         </div>
        </div>
@@ -184,9 +184,8 @@ Fun fact:</p>
           </div>
           <div class="col-8 ml-2">
               <a href="https://www.linkedin.com/in/brintmarkle">Brint Markle                <img src="/img/linkedin.svg"></a>
-              <p class="pt-2">Bio: Brint is Director of BD & Strategic Partnerships at Lucid. In his position, he leads our business development activities, product/strategic partnerships, and jointly drives integration platform vision and strategy in partnership with the product team. He frequently runs workshops and brainstorming sessions with our partners to deepen partner engagement and uncover new areas of shared value. Brint is a former founder of two outdoor technology companies, which he led from founding through early stage growth and acquisition.  He is also an Entrepreneur-in-Residence at MIT where he advises several technology start-ups, mostly helping them avoid the many mistakes he made as an entrepreneur ;)
-              Fun Fact: Brint used to live in Chile where he worked for a start-up microfinance organization, learned to speak ‘Chilean’ Spanish (cachai!?), and once skied into the crater of an active volcano.
-              </p>
+              <p class="pt-2">Brint is Director of BD & Strategic Partnerships at Lucid. In his position, he leads our business development activities, product/strategic partnerships, and jointly drives integration platform vision and strategy in partnership with the product team. He frequently runs workshops and brainstorming sessions with our partners to deepen partner engagement and uncover new areas of shared value. Brint is a former founder of two outdoor technology companies, which he led from founding through early stage growth and acquisition.  He is also an Entrepreneur-in-Residence at MIT where he advises several technology start-ups, mostly helping them avoid the many mistakes he made as an entrepreneur ;)</p>
+              <p><strong>Fun Fact:</strong> Brint used to live in Chile where he worked for a start-up microfinance organization, learned to speak ‘Chilean’ Spanish (cachai!?), and once skied into the crater of an active volcano.</p>
           </div>
         </div>
        </div>
