Added Join Now Links

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                       <div class="col-md-6 card-body homepage-card-body">
                           <h5 class="card-title">Day 1:</h5>
                           <h5 class="card-subtitle">Wednesday, June 9th</p>
+                          <button type="button" class="button32" onclick="window.open('https://lucidsoftware.zoom.us/j/95217696945','_blank')">Join Now</button>
                       </div>
                   </div>
               </div>
@@ -61,6 +62,7 @@
                     <div class=" col-md-6 card-body homepage-card-body">
                         <h5 class="card-title">Day 2:</h5>
                         <h5 class="card-subtitle">Thursday, June 10th</p>
+                          <button type="button" class="button32" onclick="window.open('https://lucidsoftware.zoom.us/j/91952998803','_blank')">Join Now</button>
                     </div>
                 </div>
               </div>
