Changed Rapid Prototyping to rapid derisking

--- a/agenda.html
+++ b/agenda.html
@@ -216,7 +216,7 @@
         <h6>3:30 - 4:30 pm</h6>
       </div>
       <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Training Session 3: Rapid Prototyping & Testing</h6>
+        <h6>Training Session 3: Rapid De-Risking</h6>
         <p>Led by Allen Liao, Saurabh Phadnis, and Jamie Lyon</p>
       </div>
     </div>
