--- a/agenda.html
+++ b/agenda.html
@@ -34,217 +34,239 @@
     </div>
   </header>
   <div class="container mt-5 my-5">
-    <div class="row mx-4">
-      <div class="col-12">
-        <p class="mb-4">Day 1</p>
-        <h4>June 9th, 2021</h4>
-        <p>All times are listed in Mountain Standard Time (MST)</p>
-      </div>
-    </div>
-    <div class="row mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>9:30 - 9:45 am</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Product Summit Kickoff</h6>
-        <p>Intros, Agenda, FAQs, Swag, Rules of Engagement. Hosted by Dan Lawyer</p>
-      </div>
+    <ul class="nav nav-tabs mx-4 my-4" id="agendaTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="day1-tab" data-bs-toggle="tab" data-bs-target="#day1" type="button" role="tab" aria-controls="day1" aria-selected="true">Day 1</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="day2-tab" data-bs-toggle="tab" data-bs-target="#day2" type="button" role="tab" aria-controls="day2" aria-selected="false">Day 2</button>
+      </li>
+    </ul>
+    <div class="tab-content" id ="agendaTabContent">
+      <div class="tab-pane fade show active" id="day1" role="tabpanel" aria-labelledby="day1-tab">
+        <div class="row mx-4">
+          <div class="col-12">
+            <h4>June 9th, 2021</h4>
+            <p>All times are listed in Mountain Standard Time (MST)</p>
+          </div>
+        </div>
+        <div class="row mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>9:30 - 9:45 am</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Product Summit Kickoff</h6>
+            <p>Intros, Agenda, FAQs, Swag, Rules of Engagement. Hosted by Dan Lawyer</p>
+          </div>
 
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>9:45 - 10:15 am</h6>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>9:45 - 10:15 am</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>AMAs pt.1</h6>
+            <p>Hosted by your Product Leadership team</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4 break-card">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>10:15 - 10:30 am</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Break</h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>10:30 am - 12:15 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Product Kickoff</h6>
+            <p>Hear from our Lucidchart, Lucidspark, Cloud Insights, Suite/Core, Engagement/Virality, Enterprise/Admin, and Integrations, UFO, and Mobile teams</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4 break-card">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>12:15 - 12:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Break</h6>
+            <p>Grab Grubhub lunch orders</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>12:30 - 1:00 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Commercial Break</h6>
+            <p>Featuring a "Day in the Life" of some of your favorite Lucidites</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>1:00 - 1:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Ice Breakers: "Shared & Unique Traits"</h6>
+            <p>Hosted by Stephane Akoki and Cole Rosenberg</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>1:30 - 2:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Training Session 1: Storytelling & Presenting</h6>
+            <p>Hosted by Jarom Chung, John Dilworth, and Phil Badger</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4 break-card">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>2:30 - 2:45 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Break</h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>2:45 - 4:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Partner Presentations</h6>
+            <p>Hear from our Sales, Customer Success, Product Marketing, Brand Creative, Growth, Analytics, and Solution Engineering teams</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>4:30 - 4:45 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Closing Notes & Wrap-Up</h6>
+            <p>Hosted by Dan Lawyer</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4 break-card">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>4:45 - 5:00 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Break / Drive Time</h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>5:00 - 6:00 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Craft Building Time</h6>
+            <p>Optional in-person time to work on crafts together with snacks/drinks</p>
+          </div>
+        </div>
+        <div class="row mt-4 mx-4">
+          <div class="col-md-2 mx-auto">
+            <button class="button32" id="day2button">Day 2 Schedule</button>
+          </div>
+        </div>
       </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>AMAs pt.1</h6>
-        <p>Hosted by your Product Leadership team</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4 break-card">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>10:15 - 10:30 am</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Break</h6>
-        <p></p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>10:30 am - 12:15 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Product Kickoff</h6>
-        <p>Hear from our Lucidchart, Lucidspark, Cloud Insights, Suite/Core, Engagement/Virality, Enterprise/Admin, and Integrations, UFO, and Mobile teams</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4 break-card">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>12:15 - 12:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Break</h6>
-        <p>Grab Grubhub lunch orders</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>12:30 - 1:00 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Commercial Break</h6>
-        <p>Featuring a "Day in the Life" of some of your favorite Lucidites</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>1:00 - 1:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Ice Breakers: "Shared & Unique Traits"</h6>
-        <p>Hosted by Stephane Akoki and Cole Rosenberg</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>1:30 - 2:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Training Session 1: Storytelling & Presenting</h6>
-        <p>Hosted by Jarom Chung, John Dilworth, and Phil Badger</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4 break-card">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>2:30 - 2:45 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Break</h6>
-        <p></p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>2:45 - 4:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Partner Presentations</h6>
-        <p>Hear from our Sales, Customer Success, Product Marketing, Brand Creative, Growth, Analytics, and Solution Engineering teams</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>4:30 - 4:45 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Closing Notes & Wrap-Up</h6>
-        <p>Hosted by Dan Lawyer</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4 break-card">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>4:45 - 5:00 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Break / Drive Time</h6>
-        <p></p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>5:00 - 6:00 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Craft Building Time</h6>
-        <p>Optional in-person time to work on crafts together with snacks/drinks</p>
-      </div>
-    </div>
-    <hr class="divider-solid mt-4">
-    <div class="row mx-4">
-      <div class="col-12">
-        <p class="mb-4 my-5">Day 2</p>
-        <h4>June 10th, 2021</h4>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>1:00 - 1:15 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Day 2 Kickoff</h6>
-        <p>Hosted by Dan Lawyer</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>1:15 - 1:45 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>AMAs pt. 2</h6>
-        <p>Hosted by your Product Leadership team</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>1:45 - 2:45 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Training Session 2: Running Workshops & Brainstorm Sessions</h6>
-        <p>Led by Taylor Halversen, Dan Ebeling, and Ian Zalles</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4 break-card">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>2:45 - 3:00 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Break</h6>
-        <p></p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>3:00 - 3:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Live Trivia</h6>
-        <p>Hosted by Tim Crabb</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>3:30 - 4:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Training Session 3: Rapid De-Risking</h6>
-        <p>Led by Allen Liao, Saurabh Phadnis, and Jamie Lyon</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>4:30 - 4:45 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Closing Notes & Wrap-Up</h6>
-        <p>Hosted by Dan Lawyer</p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4 break-card">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>4:45 - 5:00 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Break / Drive Time</h6>
-        <p></p>
-      </div>
-    </div>
-    <div class="row  mt-4 agenda-card mx-4">
-      <div class="col-md-3 p-4 agenda-card-date">
-        <h6>5:00 - 6:30 pm</h6>
-      </div>
-      <div class="col-md-7 p-4 agenda-card-content">
-        <h6>Product Summit Social</h6>
-        <p>Optional in-person Social, Awards Ceremony & Dinner</p>
+      <div class="tab-pane fade" id="day2" role="tabpanel" aria-labelledby="day2-tab">
+        <div class="row mx-4">
+          <div class="col-12">
+            <h4>June 10th, 2021</h4>
+            <p>All times are listed in Mountain Standard Time (MST)</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>1:00 - 1:15 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Day 2 Kickoff</h6>
+            <p>Hosted by Dan Lawyer</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>1:15 - 1:45 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>AMAs pt. 2</h6>
+            <p>Hosted by your Product Leadership team</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>1:45 - 2:45 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Training Session 2: Running Workshops & Brainstorm Sessions</h6>
+            <p>Led by Taylor Halversen, Dan Ebeling, and Ian Zalles</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4 break-card">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>2:45 - 3:00 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Break</h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>3:00 - 3:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Live Trivia</h6>
+            <p>Hosted by Tim Crabb</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>3:30 - 4:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Training Session 3: Rapid De-Risking</h6>
+            <p>Led by Allen Liao, Saurabh Phadnis, and Jamie Lyon</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>4:30 - 4:45 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Closing Notes & Wrap-Up</h6>
+            <p>Hosted by Dan Lawyer</p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4 break-card">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>4:45 - 5:00 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Break / Drive Time</h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="row  mt-4 agenda-card mx-4">
+          <div class="col-md-3 p-4 agenda-card-date">
+            <h6>5:00 - 6:30 pm</h6>
+          </div>
+          <div class="col-md-7 p-4 agenda-card-content">
+            <h6>Product Summit Social</h6>
+            <p>Optional in-person Social, Awards Ceremony & Dinner</p>
+          </div>
+        </div>
+        <div class="row mt-4 mx-4">
+          <div class="col-md-2 mx-auto">
+            <button class="button32" id="day1button">Day 1 Schedule</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -269,6 +291,22 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script>
+    var day1Elem = document.querySelector('#agendaTab button[data-bs-target="#day1"]');
+    var day2Elem = document.querySelector('#agendaTab button[data-bs-target="#day2"]');
+    var day1Tab = new bootstrap.Tab(day1Elem);
+    var day2Tab = new bootstrap.Tab(day2Elem);
+    function showDay1() {
+      day1Tab.show();
+      document.querySelector('#agenda-header').scrollIntoView();
+    }
+    function showDay2() {
+      day2Tab.show();
+      document.querySelector('#agenda-header').scrollIntoView();
+    }
+    document.querySelector('#day1button').addEventListener("click", showDay1);
+    document.querySelector('#day2button').addEventListener("click", showDay2);
+  </script>
 </body>
 
 </html>
