--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="css/custom.scss" rel="stylesheet">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -47,9 +47,10 @@
                           <img class="card-image" src="img/cards/saturn5.png" alt="Card image cap">
                       </div>
                       <div class="col-md-6 card-body homepage-card-body">
-                          <h5 class="card-title">Day 1:</h5>
+                          <h5 class="card-title">Day 1</h5>
                           <h5 class="card-subtitle">Wednesday, June 9th</p>
-                          <button type="button" class="button32" onclick="window.open('https://lucidsoftware.zoom.us/j/95217696945','_blank')">Join Now</button>
+                          <button type="button" class="button32 my-2" onclick="window.open('https://lucidsoftware.zoom.us/j/95217696945','_blank')">Join Now</button>
+                          <button type="button" class="button32outline my-2" onclick="location.href='/agenda.html'">View Agenda</button>
                       </div>
                   </div>
               </div>
@@ -61,9 +62,10 @@
                         <img class="card-image" src="img/cards/neil.png" alt="Card image cap">
                     </div>
                     <div class=" col-md-6 card-body homepage-card-body">
-                        <h5 class="card-title">Day 2:</h5>
+                        <h5 class="card-title">Day 2</h5>
                         <h5 class="card-subtitle">Thursday, June 10th</p>
-                          <button type="button" class="button32" onclick="window.open('https://lucidsoftware.zoom.us/j/91952998803','_blank')">Join Now</button>
+                        <button type="button" class="button32 my-2" onclick="window.open('https://lucidsoftware.zoom.us/j/91952998803','_blank')">Join Now</button>
+                        <button type="button" class="button32outline my-2" onclick="location.href='/agenda.html?day2'">View Agenda</button>
                     </div>
                 </div>
               </div>
