--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                           <h5 class="card-title">Day 1</h5>
                           <h5 class="card-subtitle">Wednesday, June 9th</p>
                           <button type="button" class="button32 my-2" onclick="window.open('https://lucidsoftware.zoom.us/j/95217696945','_blank')">Join Now</button>
-                          <button type="button" class="button32outline my-2" onclick="location.href='/agenda.html'">View Agenda</button>
+                          <button type="button" class="button32outline my-2" onclick="location.href='/agenda.html?day1'">View Agenda</button>
                       </div>
                   </div>
               </div>
