--- a/agenda.html
+++ b/agenda.html
@@ -50,7 +50,7 @@
             <p>All times are listed in Mountain Standard Time (MST)</p>
           </div>
         </div>
-        <div class="row mt-4 agenda-card mx-4">
+        <div class="row mt-4 agenda-card mx-4" id="item1">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>9:30 - 9:45 am</h6>
           </div>
@@ -60,7 +60,7 @@
           </div>
 
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item2">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>9:45 - 10:15 am</h6>
           </div>
@@ -69,7 +69,7 @@
             <p>Hosted by your Product Leadership team</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4 break-card">
+        <div class="row  mt-4 agenda-card mx-4 break-card" id="item3">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>10:15 - 10:30 am</h6>
           </div>
@@ -78,7 +78,7 @@
             <p></p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item4">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>10:30 am - 12:15 pm</h6>
           </div>
@@ -87,7 +87,7 @@
             <p>Hear from our Lucidchart, Lucidspark, Cloud Insights, Suite/Core, Engagement/Virality, Enterprise/Admin, and Integrations, UFO, and Mobile teams</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4 break-card">
+        <div class="row  mt-4 agenda-card mx-4 break-card" id="item5">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>12:15 - 12:30 pm</h6>
           </div>
@@ -96,7 +96,7 @@
             <p>Grab Grubhub lunch orders</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item6">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>12:30 - 1:00 pm</h6>
           </div>
@@ -105,7 +105,7 @@
             <p>Featuring a "Day in the Life" of some of your favorite Lucidites</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item7">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>1:00 - 1:30 pm</h6>
           </div>
@@ -114,7 +114,7 @@
             <p>Hosted by Stephane Akoki and Cole Rosenberg</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item8">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>1:30 - 2:30 pm</h6>
           </div>
@@ -123,7 +123,7 @@
             <p>Hosted by Jarom Chung, John Dilworth, and Phil Badger</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4 break-card">
+        <div class="row  mt-4 agenda-card mx-4 break-card" id="item9">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>2:30 - 2:45 pm</h6>
           </div>
@@ -132,7 +132,7 @@
             <p></p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item10">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>2:45 - 4:30 pm</h6>
           </div>
@@ -141,7 +141,7 @@
             <p>Hear from our Sales, Customer Success, Product Marketing, Brand Creative, Growth, Analytics, and Solution Engineering teams</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item11">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>4:30 - 4:45 pm</h6>
           </div>
@@ -150,7 +150,7 @@
             <p>Hosted by Dan Lawyer</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4 break-card">
+        <div class="row  mt-4 agenda-card mx-4 break-card" id="item12">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>4:45 - 5:00 pm</h6>
           </div>
@@ -159,7 +159,7 @@
             <p></p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4"  id="item13">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>5:00 - 6:00 pm</h6>
           </div>
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="row  mt-4 agenda-card mx-4">
-          <div class="col-md-3 p-4 agenda-card-date">
+          <div class="col-md-3 p-4 agenda-card-date" id="item14">
             <h6>1:00 - 1:15 pm</h6>
           </div>
           <div class="col-md-7 p-4 agenda-card-content">
@@ -190,7 +190,7 @@
             <p>Hosted by Dan Lawyer</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item15">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>1:15 - 1:45 pm</h6>
           </div>
@@ -199,7 +199,7 @@
             <p>Hosted by your Product Leadership team</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item16">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>1:45 - 2:45 pm</h6>
           </div>
@@ -208,7 +208,7 @@
             <p>Led by Taylor Halversen, Dan Ebeling, and Ian Zalles</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4 break-card">
+        <div class="row  mt-4 agenda-card mx-4 break-card" id="item17">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>2:45 - 3:00 pm</h6>
           </div>
@@ -217,7 +217,7 @@
             <p></p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item18">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>3:00 - 3:30 pm</h6>
           </div>
@@ -226,7 +226,7 @@
             <p>Hosted by Tim Crabb</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item19">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>3:30 - 4:30 pm</h6>
           </div>
@@ -235,7 +235,7 @@
             <p>Led by Allen Liao, Saurabh Phadnis, and Jamie Lyon</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item20">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>4:30 - 4:45 pm</h6>
           </div>
@@ -244,7 +244,7 @@
             <p>Hosted by Dan Lawyer</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4 break-card">
+        <div class="row  mt-4 agenda-card mx-4 break-card" id="item21">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>4:45 - 5:00 pm</h6>
           </div>
@@ -253,7 +253,7 @@
             <p></p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
+        <div class="row  mt-4 agenda-card mx-4" id="item22">
           <div class="col-md-3 p-4 agenda-card-date">
             <h6>5:00 - 6:30 pm</h6>
           </div>
@@ -275,7 +275,6 @@
   <include src="partials/footer.html"></include>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -313,6 +312,7 @@
       day1Tab.show();
     }
   </script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
