--- a/agenda.html
+++ b/agenda.html
@@ -37,14 +37,14 @@
   <div class="container mt-5 my-5">
     <ul class="nav nav-tabs mx-4 my-4" id="agendaTab" role="tablist">
       <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="day1-tab" data-bs-toggle="tab" data-bs-target="#day1" type="button" role="tab" aria-controls="day1" aria-selected="true">Day 1</button>
+        <button class="nav-link" id="day1-tab" data-bs-toggle="tab" data-bs-target="#day1" type="button" role="tab" aria-controls="day1" aria-selected="true">Day 1</button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="day2-tab" data-bs-toggle="tab" data-bs-target="#day2" type="button" role="tab" aria-controls="day2" aria-selected="false">Day 2</button>
+        <button class="nav-link active" id="day2-tab" data-bs-toggle="tab" data-bs-target="#day2" type="button" role="tab" aria-controls="day2" aria-selected="false">Day 2</button>
       </li>
     </ul>
     <div class="tab-content" id ="agendaTabContent">
-      <div class="tab-pane fade show active" id="day1" role="tabpanel" aria-labelledby="day1-tab">
+      <div class="tab-pane fade" id="day1" role="tabpanel" aria-labelledby="day1-tab">
         <div class="row mx-4">
           <div class="col-12">
             <h4>June 9th, 2021</h4>
@@ -175,7 +175,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane fade" id="day2" role="tabpanel" aria-labelledby="day2-tab">
+      <div class="tab-pane fade show active" id="day2" role="tabpanel" aria-labelledby="day2-tab">
         <div class="row mx-4">
           <div class="col-12">
             <h4>June 10th, 2021</h4>
@@ -206,7 +206,7 @@
           </div>
           <div class="col-md-7 p-4 agenda-card-content">
             <h6>Training Session 2: Running Workshops & Brainstorm Sessions</h6>
-            <p>Led by Taylor Halversen, Dan Ebeling, and Ian Zalles</p>
+            <p>Led by Taylor Halversen, Dan Ebeling, and Brint Markle</p>
           </div>
         </div>
         <div class="row  mt-4 agenda-card mx-4 break-card" id="item17">
