Fixed agenda card issue

--- a/agenda.html
+++ b/agenda.html
@@ -182,8 +182,8 @@
             <p>All times are listed in Mountain Standard Time (MST)</p>
           </div>
         </div>
-        <div class="row  mt-4 agenda-card mx-4">
-          <div class="col-md-3 p-4 agenda-card-date" id="item14">
+        <div class="row  mt-4 agenda-card mx-4" id="item14">
+          <div class="col-md-3 p-4 agenda-card-date">
             <h6>1:00 - 1:15 pm</h6>
           </div>
           <div class="col-md-7 p-4 agenda-card-content">
